--- a/src/Nav.css
+++ b/src/Nav.css
@@ -8,6 +8,7 @@
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: 1fr;
     padding: 36px 175px;
+    color: white;
 }
 nav h3 {
     grid-column: 1;
