--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
     left: -450px;
     top: -400px;
   }
-  .background1::after {
+  .background1::before {
     content: "";
     display: block;
     width: 1870.277px;
@@ -26,12 +26,14 @@
     content: "";
     display: block;
     border-left: 700px solid transparent;
-    border-right: 1000px solid transparent;
+    border-right: 200px solid transparent;
     border-bottom: 700px solid #161033;
     z-index: -2;
     position: absolute;
     transform: rotate(-33deg);
-    top: -650px;
+    top: -400px;
     left: 300px;
+
   }
+
 
