--- a/src/Body/Footer.css
+++ b/src/Body/Footer.css
@@ -1,23 +1,10 @@
 .footer-container{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: auto;
+    grid-template-rows: 1fr 0.5fr;
     justify-content: center;
     padding-top: 111px;
-    border: 1px solid black;
-}
-.background3::after {
-    content: "";
-    display: block;
-    width: 1600px;
-    height: 500px;
-    transform: rotate(172deg);
-    flex-shrink: 0;
     background-image: linear-gradient(to top, #161033,#7A3199);
-    position: absolute;
-    z-index: -2;
-    top: 2600px;
-    left: -10px;
 }
 .quotes{
     grid-column: 2;
