--- a/src/Body/Footer.css
+++ b/src/Body/Footer.css
@@ -4,7 +4,13 @@
     grid-template-rows: 1fr 0.5fr;
     justify-content: center;
     padding-top: 111px;
+}
+.bgnd{
+    grid-row: 1/3;
+    grid-column: 1/4;
+    z-index: -2;
     background-image: linear-gradient(to top, #161033,#7A3199);
+    clip-path: polygon(0% 78%, 100% 0%, 100% 100%, 0% 100%);
 }
 .quotes{
     grid-column: 2;
