--- a/src/Body/Footer.css
+++ b/src/Body/Footer.css
@@ -13,6 +13,7 @@
     clip-path: polygon(0% 78%, 100% 0%, 100% 100%, 0% 100%);
 }
 .quotes{
+    grid-row: 1;
     grid-column: 2;
     justify-self: center;
     text-align: center;
